# src/routes/index.ts
@@ -5,6 +5,6 @@ import especificationRoutes from "./especification.routes";
 const router = Router();
 
 router.use("/categories", categorieRoutes);
-router.use("/especification", especificationRoutes);
+router.use("/specification", especificationRoutes);
 
 export default router;
